# Gravador_IMU

./: CMakeLists.txt  Gravador_IMU.c  Gravador_IMU.h  README.md
ArquivosDados/: PlotaDados.py  dados_IMU.csv
